# brighton-web-development-meetup-oct2025

./: .env.local  00_promtps.md  01.0_raw_post_request.py  01.1_openai.html  01.2_openai_faq.html  01.2_openai_rag.html  01.3_openai_chatgpt-clone.html  01.3_openai_rag_chatgpt_clone.html  01.3_router.ipynb  01.4_router.ipynb  02.1_prompt.md  02.2_demo_tool_calling.py  03_openai_tool_calling.html  04.1_code.md  04.2_critique.md  04.3_final.md  04_demo_reflection.ipynb  README.md  main.py  pyproject.toml  requirements.txt  why_temp_equal_zero_not_deterministic.md
_archive/: 04.2_critique.md
