[project]
name = "brighton-web-development-meetup-oct-2025"
version = "1.0.0"
description = "Repo for talk at Brighton Web Development MeetUp OCT2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "openai>=2.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
